--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "random-gif",
   "version": "0.1.0",
-  "homepage": "https://Dishankaswal.github.io/random-gifGenerator",
   "private": true,
   "dependencies": {
     "axios": "^1.3.4",
@@ -14,9 +13,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
